force-app/main/default/objects/nd_integration_object_config__c/nd_integration_object_config__c.object-meta.xml
<CustomObject>
    <description>Information related to the custom metadata sync to the data warehouse.</description>
    <label>Integration Object Config</label>
    <nameField>
        <label>ND Integration Object Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ND Integration Object Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>