force-app/main/default/objects/nd_integration_object_config__c/fields/mtd_delete_message__c.field-meta.xml
<CustomField>
    <fullName>mtd_delete_message__c</fullName>
    <description>Holds errors that occur for this object in the talend job job_ascend_producer_custom_metadata_deletes</description>
    <inlineHelpText>Holds errors that occur for this object in the talend job job_ascend_producer_custom_metadata_deletes</inlineHelpText>
    <label>mtd delete message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>