force-app/main/default/objects/nd_integration_object_config__c/fields/mtd_delete_status__c.field-meta.xml
<CustomField>
    <fullName>mtd_delete_status__c</fullName>
    <label>mtd_delete_status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>