force-app/main/default/objects/nd_integration_object_config__c/fields/mtd_extract_message__c.field-meta.xml
<CustomField>
    <fullName>mtd_extract_message__c</fullName>
    <description>Holds errors that occur for this object in the nd_mdt sync job</description>
    <inlineHelpText>Holds errors that occur for this object in the nd_mdt sync job</inlineHelpText>
    <label>mdt extract message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>