force-app/main/default/objects/nd_integration_object_config__c/fields/mtd_extract_processed_date__c.field-meta.xml
<CustomField>
    <fullName>mtd_extract_processed_date__c</fullName>
    <description>This is the date time of the last time a change of records was looked for.</description>
    <inlineHelpText>This is the date time of the last time a change of records was looked for.</inlineHelpText>
    <label>mtd extract processed date</label>
    <type>DateTime</type>
</CustomField>