force-app/main/default/objects/nd_integration_object_config__c/fields/mtd_extract_status__c.field-meta.xml
<CustomField>
    <fullName>mtd_extract_status__c</fullName>
    <description>The status of the last run attempt for this object.</description>
    <inlineHelpText>The status of the last run attempt for this object.</inlineHelpText>
    <label>mtd extract status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>