force-app/main/default/objects/nd_integration_object_config__c/fields/mtd_extract_to_integration_out__c.field-meta.xml
<CustomField>
    <fullName>mtd_extract_to_integration_out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Execute sync of this table to integration out</description>
    <inlineHelpText>If this field is checked, the talend apex class ND_MDT_Sync called by talend job job_ascend_producer_custom_metadata will copy any changed ids for the table specified by this row and copy them to integration out</inlineHelpText>
    <label>mtd extract to integration out</label>
    <type>Checkbox</type>
</CustomField>