force-app/main/default/objects/nd_integration_object_config__c/fields/mtd_max_successful_extract_datetime__c.field-meta.xml
<CustomField>
    <fullName>mtd_max_successful_extract_datetime__c</fullName>
    <description>This is the date time on the most recent row moved to integration out</description>
    <inlineHelpText>This is the date time on the most recent row moved to integration out</inlineHelpText>
    <label>mtd max successful extract datetime</label>
    <type>DateTime</type>
</CustomField>