force-app/main/default/objects/nd_integration_object_config__c/fields/mtd_object_name__c.field-meta.xml
<CustomField>
    <fullName>mtd_object_name__c</fullName>
    <label>mtd object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>