force-app/main/default/objects/nd_integration_object_config__c/fields/mtd_warehouse_schema__c.field-meta.xml
<CustomField>
    <fullName>mtd_warehouse_schema__c</fullName>
    <label>mtd warehouse schema</label>
    <length>25</length>
    <type>Text</type>
</CustomField>