force-app/main/default/objects/nd_integration_object_config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mtd_warehouse_schema__c</columns>
    <columns>mtd_max_successful_extract_datetime__c</columns>
    <columns>mtd_extract_status__c</columns>
    <columns>mtd_extract_message__c</columns>
    <columns>mtd_delete_message__c</columns>
    <columns>mtd_extract_to_integration_out__c</columns>
    <columns>mtd_delete_status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>